Hide future content

--- a/schedule.html
+++ b/schedule.html
@@ -938,23 +938,23 @@ Lectures
 </button>
 <div class="nav-dropdown-content">
 <a href="./slides/EDUC641_1_intro.html">1. Intro &amp; research design</a>
-<a href="./slides/EDUC641_2_measures.html">2. Measurement</a>
-<a href="./slides/EDUC641_3_categdescr.html">3. Categorical descriptives</a>
-<a href="./slides/EDUC641_4_categrel.html">4. Categorical relationships I</a>
-<a href="./slides/EDUC641_5_categrel.html">5. Categorical relationships II</a>
-<a href="./slides/EDUC641_6_history.html">6. Troubling history of stats</a>
-<a href="./slides/EDUC641_7_continuousdescr.html">7. Continuous descriptives I</a>
-<a href="./slides/EDUC641_7_continuousdescr.html">8. Continuous descriptives II</a>
-<a href="./slides/EDUC641_9_transformations.html">9. Transformations and z-scores</a>
-<a href="./slides/EDUC641_10_inference.html">10. Normal distributions</a>
-<a href="./slides/EDUC641_10_inference.html">11. CLT</a>
-<a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
-<a href="./slides/EDUC641_14_continuousrel.html">13. Continuous relationships I</a>
-<a href="./slides/EDUC641_15_regression.html">14. Bivariate regression I</a>
-<a href="./slides/EDUC641_16_residuals.html">15. Bivariate regression II</a>
-<a href="./slides/EDUC641_16_residuals.html">16. Regression assumptions</a>
-<a href="./slides/EDUC641_17_critiques.html">17. NHST critiques</a>
-<a href="./slides/EDUC641_17_critiques.html">18. NHST critiques and summary</a>
+<span class="nav-dropdown-header">2. Measurement</span>
+<span class="nav-dropdown-header">3. Categorical descriptives</span>
+<span class="nav-dropdown-header">4. Categorical relationships I</span>
+<span class="nav-dropdown-header">5. Categorical relationships II</span>
+<span class="nav-dropdown-header">6. Troubling history of stats</span>
+<span class="nav-dropdown-header">7. Continuous descriptives I</span>
+<span class="nav-dropdown-header">8. Continuous descriptives II</span>
+<span class="nav-dropdown-header">9. Transformations and z-scores</span>
+<span class="nav-dropdown-header">10. Normal distributions</span>
+<span class="nav-dropdown-header">11. CLT</span>
+<span class="nav-dropdown-header">12. Z- and t-tests</span>
+<span class="nav-dropdown-header">13. Continuous relationships I</span>
+<span class="nav-dropdown-header">14. Bivariate regression I</span>
+<span class="nav-dropdown-header">15. Bivariate regression II</span>
+<span class="nav-dropdown-header">16. Regression assumptions</span>
+<span class="nav-dropdown-header">17. NHST critiques</span>
+<span class="nav-dropdown-header">18. NHST critiques and summary</span>
 </div>
 </div>
 </div>
@@ -999,57 +999,23 @@ Lectures
     <li>
       <a href="./slides/EDUC641_1_intro.html">1. Intro &amp; research design</a>
     </li>
-    <li>
-      <a href="./slides/EDUC641_2_measures.html">2. Measurement</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_3_categdescr.html">3. Categorical descriptives</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_4_categrel.html">4. Categorical relationships I</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_5_categrel.html">5. Categorical relationships II</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_6_history.html">6. Troubling history of stats</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_7_continuousdescr.html">7. Continuous descriptives I</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_7_continuousdescr.html">8. Continuous descriptives II</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_9_transformations.html">9. Transformations and z-scores</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_10_inference.html">10. Normal distributions</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_10_inference.html">11. CLT</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_14_continuousrel.html">13. Continuous relationships I</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_15_regression.html">14. Bivariate regression I</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_16_residuals.html">15. Bivariate regression II</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_16_residuals.html">16. Regression assumptions</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_17_critiques.html">17. NHST critiques</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_17_critiques.html">18. NHST critiques and summary</a>
-    </li>
+    <li class="dropdown-header">2. Measurement</li>
+    <li class="dropdown-header">3. Categorical descriptives</li>
+    <li class="dropdown-header">4. Categorical relationships I</li>
+    <li class="dropdown-header">5. Categorical relationships II</li>
+    <li class="dropdown-header">6. Troubling history of stats</li>
+    <li class="dropdown-header">7. Continuous descriptives I</li>
+    <li class="dropdown-header">8. Continuous descriptives II</li>
+    <li class="dropdown-header">9. Transformations and z-scores</li>
+    <li class="dropdown-header">10. Normal distributions</li>
+    <li class="dropdown-header">11. CLT</li>
+    <li class="dropdown-header">12. Z- and t-tests</li>
+    <li class="dropdown-header">13. Continuous relationships I</li>
+    <li class="dropdown-header">14. Bivariate regression I</li>
+    <li class="dropdown-header">15. Bivariate regression II</li>
+    <li class="dropdown-header">16. Regression assumptions</li>
+    <li class="dropdown-header">17. NHST critiques</li>
+    <li class="dropdown-header">18. NHST critiques and summary</li>
   </ul>
 </li>
       </ul>
@@ -1109,9 +1075,8 @@ href="./assignments/Light%20Singer%20Willet%201990.pdf">Light, Singer
 <li>Class 1 (9/26) slides: <a
 href="./slides/EDUC641_1_intro.html">html</a> | <a
 href="./slides/EDUC641_1_intro.pdf">pdf</a></li>
-<li>Class 2 (9/28) slides: <a
-href="./slides/EDUC641_2_measures.html">html</a> | <a
-href="./slides/EDUC641_2_measures.pdf">pdf</a></li>
+<li>Class 2 (9/28) slides:
+<!-- [html](./slides/EDUC641_2_measures.html) | [pdf](./slides/EDUC641_2_measures.pdf) --></li>
 <li>R Tutorial slides: <a href="./slides/tutorial.html">html</a></li>
 </ul>
 </div>
@@ -1137,20 +1102,17 @@ href="./assignments/evans_2020.pdf">Evans</a></li>
 </ul>
 <p>Lectures:</p>
 <ul>
-<li>Class 3 (10/3) slides: <a
-href="./slides/EDUC641_3_categdescr.html">html</a> | <a
-href="./slides/EDUC641_3_categdescr.pdf">pdf</a></li>
-<li>Data: <a href="./data/deathpenalty.csv">deathpenalty.csv</a> | <a
-href="./data/deathpenalty_codebook.pdf">codebook</a></li>
-<li>R code: <a href="./slides/EDUC641_3_code.R">R script</a></li>
-<li>Lab slides: <a
-href="https://claireconglizhang.github.io/my-slides/EDUC64122F/lab2.html#1">html</a></li>
+<li>Class 3 (10/3) slides:
+<!-- [html](./slides/EDUC641_3_categdescr.html) | [pdf](./slides/EDUC641_3_categdescr.pdf)
+- Data: [deathpenalty.csv](./data/deathpenalty.csv) | [codebook](./data/deathpenalty_codebook.pdf)
+- R code: [R script](./slides/EDUC641_3_code.R)
+- Lab slides: [html](https://claireconglizhang.github.io/my-slides/EDUC64122F/lab2.html#1) --></li>
 </ul>
 <p>Assignment 1:</p>
 <ul>
 <li>Due: October 9, 11:59pm</li>
-<li><a href="./assignments/assignment01.html">html file</a></li>
-<li><a href="./data/cat.csv">cat.csv dataset</a></li>
+<li><!-- [html file](./assignments/assignment01.html)
+- [cat.csv dataset](./data/cat.csv) --></li>
 </ul>
 </div>
 <div id="unit-2" class="section level2">
@@ -1184,21 +1146,19 @@ href="https://nautil.us/issue/92/frontiers/how-eugenics-shaped-statistics">Clayt
 </ul>
 <p>Lectures:</p>
 <ul>
-<li><p>Classes 4-5 (10/5 and 10/10) slides: <a
-href="./slides/EDUC641_4_categrel.html">html</a> | <a
-href="./slides/EDUC641_4_categrel.pdf">pdf</a></p></li>
-<li><p>Class 6 (10/12) slides: <a
-href="./slides/EDUC641_6_history.html">html</a> | <a
-href="./slides/EDUC641_6_history.pdf">pdf</a></p></li>
-<li><p>Data: <a href="./data/deathpenalty.csv">deathpenalty.csv</a> | <a
-href="./data/deathpenalty.csv">codebook</a></p></li>
-<li><p>R code: <a href="./slides/EDUC641_4_code.R">R script</a></p></li>
+<li>Classes 4-5 (10/5 and 10/10) slides:
+<!-- [html](./slides/EDUC641_4_categrel.html) | [pdf](./slides/EDUC641_4_categrel.pdf)
+- Class 6 (10/12) slides: [html](./slides/EDUC641_6_history.html) | [pdf](./slides/EDUC641_6_history.pdf)
+
+
+- Data: [deathpenalty.csv](./data/deathpenalty.csv) | [codebook](./data/deathpenalty.csv) 
+- R code: [R script](./slides/EDUC641_4_code.R) --></li>
 </ul>
 <p>Assignment 2:</p>
 <ul>
 <li>Due: October 20, 11:59pm</li>
-<li><a href="./assignments/assignment02.html">html file</a></li>
-<li><a href="./data/cat.csv">cat.csv dataset</a></li>
+<li><!-- [html file](./assignments/assignment02.html)
+- [cat.csv dataset](./data/cat.csv) --></li>
 </ul>
 </div>
 <div id="unit-3" class="section level2">
@@ -1252,25 +1212,19 @@ href="https://learningstatisticswithr.com/lsr-0.6.pdf">LSWR Chapter
 </ul>
 <p>Lecture slides:</p>
 <ul>
-<li><p>Classes 7-8 (10/17 &amp; 10/19) slides: <a
-href="./slides/EDUC641_7_continuousdescr.html">html</a> | <a
-href="./slides/EDUC641_7_continuousdescr.pdf">pdf</a></p></li>
-<li><p>Class 9 (10/24) slides: <a
-href="./slides/EDUC641_9_transformations.html">html</a> | <a
-href="./slides/EDUC641_9_transformations.pdf">pdf</a></p></li>
-<li><p>Classes 10-12 (10/26, 10/31, &amp; 11/2) slides: <a
-href="./slides/EDUC641_10_inference.html">html</a> | <a
-href="./slides/EDUC641_10_inference.pdf">pdf</a></p></li>
-<li><p>Data: <a
-href="./data/life_expectancy.csv">life_expectancy.csv</a> | <a
-href="./data/life_expectancy_codebook.pdf">codebook</a></p></li>
-<li><p>R code: <a href="./slides/EDUC641_7_code.R">R Script</a></p></li>
+<li>Classes 7-8 (10/17 &amp; 10/19) slides:
+<!-- [html](./slides/EDUC641_7_continuousdescr.html) | [pdf](./slides/EDUC641_7_continuousdescr.pdf)
+- Class 9 (10/24) slides: [html](./slides/EDUC641_9_transformations.html) | [pdf](./slides/EDUC641_9_transformations.pdf)
+- Classes 10-12 (10/26, 10/31, & 11/2) slides: [html](./slides/EDUC641_10_inference.html) | [pdf](./slides/EDUC641_10_inference.pdf)
+
+- Data: [life_expectancy.csv](./data/life_expectancy.csv) | [codebook](./data/life_expectancy_codebook.pdf)
+- R code: [R Script](./slides/EDUC641_7_code.R) --></li>
 </ul>
 <p>Assignment 3:</p>
 <ul>
 <li>Due: November 9, 11:59p</li>
-<li><a href="./assignments/assignment03.html">html file</a></li>
-<li><a href="./data/cont.csv">cont.csv dataset</a></li>
+<li><!-- [html file](./assignments/assignment03.html)
+- [cont.csv dataset](./data/cont.csv) --></li>
 </ul>
 </div>
 <div id="unit-4" class="section level2">
@@ -1299,31 +1253,27 @@ Chapter 15.1 and 15.2</a></li>
 </ul>
 <p>Lecture slides:</p>
 <ul>
-<li>Class 13 (11/7) slides: <a
-href="./slides/EDUC641_14_continuousrel.html">html</a> | <a
-href="./slides/EDUC641_14_continuousrel.pdf">pdf</a>
+<li>Class 13 (11/7) slides:
+<!-- [html](./slides/EDUC641_14_continuousrel.html) | [pdf](./slides/EDUC641_14_continuousrel.pdf) -->
 <ul>
 <li><strong>No class on 11/9 (David traveling for
 conference)</strong></li>
 </ul></li>
-<li>Class 14 (11/14) slides: <a
-href="./slides/EDUC641_15_regression.html">html</a> | <a
-href="./slides/EDUC641_15_regression.pdf">pdf</a></li>
-<li>Class 15-16 slides (11/16 &amp; 11/21): <a
-href="./slides/EDUC641_16_residuals.html">html</a> | <a
-href="./slides/EDUC641_16_residuals.pdf">pdf</a>
+<li>Class 14 (11/14) slides:
+<!-- [html](./slides/EDUC641_15_regression.html) | [pdf](./slides/EDUC641_15_regression.pdf)
+- Class 15-16 slides (11/16 & 11/21): [html](./slides/EDUC641_16_residuals.html) | [pdf](./slides/EDUC641_16_residuals.pdf) -->
 <ul>
 <li><strong>No class on 11/23 (university holiday)</strong></li>
 </ul></li>
-<li>Data: <a
-href="./data/life_expectancy.csv">life_expectancy.csv</a></li>
-<li>R code: <a href="./slides/EDUC641_14_code.R">R script</a></li>
 </ul>
+<!--
+- Data:  [life_expectancy.csv](./data/life_expectancy.csv)
+- R code: [R script](./slides/EDUC641_14_code.R) -->
 <p>Assignment 4:</p>
 <ul>
-<li>Due Nov. 27, 11:59pm</li>
-<li><a href="./assignments/assignment04.html">html file</a></li>
-<li><a href="./data/cont.csv">cont.csv</a></li>
+<li>Due Nov. 27, 11:59pm <!--
+ - [html file](./assignments/assignment04.html)
+ - [cont.csv](./data/cont.csv) --></li>
 </ul>
 </div>
 <div id="unit-5" class="section level2">
@@ -1335,20 +1285,18 @@ href="./data/life_expectancy.csv">life_expectancy.csv</a></li>
 testing framework</p></li>
 <li><p>Describe strategies to improve replicability and generalizability
 of quantitative research</p></li>
-<li><p>Classes 17-18 (11/28 &amp; 11/30): <a
-href="./slides/EDUC641_17_critiques.html">html</a> | <a
-href="./slides/EDUC641_17_critiques.pdf">pdf</a></p></li>
-<li><p>Data management cheat sheet: <a
-href="data_management.html">html</a></p></li>
+<li><p>Classes 17-18 (11/28 &amp; 11/30):
+<!-- [html](./slides/EDUC641_17_critiques.html) | [pdf](./slides/EDUC641_17_critiques.pdf)
+
+- Data management cheat sheet: [html](data_management.html) --></p></li>
 </ul>
 </div>
 <div id="final-assignment" class="section level2">
 <h2>Final Assignment</h2>
 <ul>
-<li>Due December 6 at 11:59pm</li>
-<li><a href="./assignments/assignment05.html">html file</a></li>
-<li><a href="./data/ah01.csv">ah01.csv</a> | <a
-href="./data/ah02.csv">ah02.csv</a></li>
+<li>Due December 6 at 11:59pm <!--
+- [html file](./assignments/assignment05.html)
+- [ah01.csv](./data/ah01.csv) | [ah02.csv](./data/ah02.csv) --></li>
 </ul>
 </div>
 
