--- a/data_management.html
+++ b/data_management.html
@@ -865,23 +865,23 @@ Lectures
 </button>
 <div class="nav-dropdown-content">
 <a href="./slides/EDUC641_1_intro.html">1. Intro &amp; research design</a>
-<a href="./slides/EDUC641_2_measures.html">2. Measurement</a>
-<a href="./slides/EDUC641_3_categdescr.html">3. Categorical descriptives</a>
-<a href="./slides/EDUC641_4_categrel.html">4. Categorical relationships I</a>
-<a href="./slides/EDUC641_5_categrel.html">5. Categorical relationships II</a>
-<a href="./slides/EDUC641_6_history.html">6. Troubling history of stats</a>
-<a href="./slides/EDUC641_7_continuousdescr.html">7. Continuous descriptives I</a>
-<a href="./slides/EDUC641_7_continuousdescr.html">8. Continuous descriptives II</a>
-<a href="./slides/EDUC641_9_transformations.html">9. Transformations and z-scores</a>
-<a href="./slides/EDUC641_10_inference.html">10. Normal distributions</a>
-<a href="./slides/EDUC641_10_inference.html">11. CLT</a>
-<a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
-<a href="./slides/EDUC641_14_continuousrel.html">13. Continuous relationships I</a>
-<a href="./slides/EDUC641_15_regression.html">14. Bivariate regression I</a>
-<a href="./slides/EDUC641_16_residuals.html">15. Bivariate regression II</a>
-<a href="./slides/EDUC641_16_residuals.html">16. Regression assumptions</a>
-<a href="./slides/EDUC641_17_critiques.html">17. NHST critiques</a>
-<a href="./slides/EDUC641_17_critiques.html">18. NHST critiques and summary</a>
+<span class="nav-dropdown-header">2. Measurement</span>
+<span class="nav-dropdown-header">3. Categorical descriptives</span>
+<span class="nav-dropdown-header">4. Categorical relationships I</span>
+<span class="nav-dropdown-header">5. Categorical relationships II</span>
+<span class="nav-dropdown-header">6. Troubling history of stats</span>
+<span class="nav-dropdown-header">7. Continuous descriptives I</span>
+<span class="nav-dropdown-header">8. Continuous descriptives II</span>
+<span class="nav-dropdown-header">9. Transformations and z-scores</span>
+<span class="nav-dropdown-header">10. Normal distributions</span>
+<span class="nav-dropdown-header">11. CLT</span>
+<span class="nav-dropdown-header">12. Z- and t-tests</span>
+<span class="nav-dropdown-header">13. Continuous relationships I</span>
+<span class="nav-dropdown-header">14. Bivariate regression I</span>
+<span class="nav-dropdown-header">15. Bivariate regression II</span>
+<span class="nav-dropdown-header">16. Regression assumptions</span>
+<span class="nav-dropdown-header">17. NHST critiques</span>
+<span class="nav-dropdown-header">18. NHST critiques and summary</span>
 </div>
 </div>
 </div>
@@ -926,57 +926,23 @@ Lectures
     <li>
       <a href="./slides/EDUC641_1_intro.html">1. Intro &amp; research design</a>
     </li>
-    <li>
-      <a href="./slides/EDUC641_2_measures.html">2. Measurement</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_3_categdescr.html">3. Categorical descriptives</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_4_categrel.html">4. Categorical relationships I</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_5_categrel.html">5. Categorical relationships II</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_6_history.html">6. Troubling history of stats</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_7_continuousdescr.html">7. Continuous descriptives I</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_7_continuousdescr.html">8. Continuous descriptives II</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_9_transformations.html">9. Transformations and z-scores</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_10_inference.html">10. Normal distributions</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_10_inference.html">11. CLT</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_14_continuousrel.html">13. Continuous relationships I</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_15_regression.html">14. Bivariate regression I</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_16_residuals.html">15. Bivariate regression II</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_16_residuals.html">16. Regression assumptions</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_17_critiques.html">17. NHST critiques</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_17_critiques.html">18. NHST critiques and summary</a>
-    </li>
+    <li class="dropdown-header">2. Measurement</li>
+    <li class="dropdown-header">3. Categorical descriptives</li>
+    <li class="dropdown-header">4. Categorical relationships I</li>
+    <li class="dropdown-header">5. Categorical relationships II</li>
+    <li class="dropdown-header">6. Troubling history of stats</li>
+    <li class="dropdown-header">7. Continuous descriptives I</li>
+    <li class="dropdown-header">8. Continuous descriptives II</li>
+    <li class="dropdown-header">9. Transformations and z-scores</li>
+    <li class="dropdown-header">10. Normal distributions</li>
+    <li class="dropdown-header">11. CLT</li>
+    <li class="dropdown-header">12. Z- and t-tests</li>
+    <li class="dropdown-header">13. Continuous relationships I</li>
+    <li class="dropdown-header">14. Bivariate regression I</li>
+    <li class="dropdown-header">15. Bivariate regression II</li>
+    <li class="dropdown-header">16. Regression assumptions</li>
+    <li class="dropdown-header">17. NHST critiques</li>
+    <li class="dropdown-header">18. NHST critiques and summary</li>
   </ul>
 </li>
       </ul>
@@ -1019,9 +985,8 @@ Code folder.</p>
 <div id="load-relevant-packages" class="section level2">
 <h2>Load relevant packages</h2>
 <pre class="r"><code># Call one package
-library(pacman)</code></pre>
-<pre><code>## Warning: package &#39;pacman&#39; was built under R version 4.1.3</code></pre>
-<pre class="r"><code># Call multiple packages at once
+library(pacman)
+# Call multiple packages at once
 p_load(tidyverse, here, modelsummary)</code></pre>
 </div>
 <div id="read-the-data-in" class="section level2">
