fix typos in syllabus

--- a/schedule.html
+++ b/schedule.html
@@ -1067,7 +1067,7 @@ analysis</strong></p>
 <li>Complete <strong>prior to Sept. 28</strong> class: <a
 href="https://learningstatisticswithr.com/lsr-0.6.pdf">LSWR Chapters 2
 and 3</a> and <a
-href="./assignments/Light%20Singer%20Willet%201990.pdf">Light, Singer
+href="./assignments/Light%20Singer%20Willett%201990.pdf">Light, Singer
 &amp; Willet, 1990, pp. 1-40</a></li>
 </ul>
 <p>Lectures:</p>
