fix syllabus link

--- a/syllabus.html
+++ b/syllabus.html
@@ -1234,8 +1234,9 @@ href="https://www.askcodi.com/">AskCodi</a>.</p>
 <td align="left">0</td>
 <td align="left">1</td>
 <td align="left">Intro to scientific principles and data analysis</td>
-<td align="left">LSWR Ch 2 and 3 <br> Light, Singer &amp; Willet 1990,
-Ch. 2</td>
+<td align="left">LSWR Ch 2 and 3 <br> <a
+href="./assignments/Light%20Singer%20Willett%201990.pdf">Light, Singer
+&amp; Willet 1990, Ch. 2</a></td>
 <td align="left">-</td>
 <td align="left">Quiz 1</td>
 </tr>
