--- a/syllabus.html
+++ b/syllabus.html
@@ -1098,7 +1098,7 @@ quantitative data that are categorical and continuous</li>
 relationships between simple categorical and continuous data</li>
 <li>Describe strategies to improve the replicability and
 generalizability of quantitative research</li>
-<li>Use on open-source, object-oriented statistical programming language
+<li>Use an open-source, object-oriented statistical programming language
 (in this case R) to conduct all such analyses</li>
 </ol>
 </div>
@@ -1185,23 +1185,24 @@ href="https://stackoverflow.com/questions/tagged/r">StackOverflow</a></li>
 efficiency of many programmers. Members of the teaching team regularly
 use such tools in their analytic and drafting tasks. That said, they are
 not (as least currently) substitutes for skilled analysts and writers.
-Beyond AI chatbots’ known proclivity for “hallucinating” facts, their
-solutions to programming tasks often require adaptation and revision by
-a knowledgeable human. Further, because their ability to generate text
-relies on using billions of phrase chunks in the public domain to
-predict the next word, their language on technical topics can be
-imprecise when many other writers on these topics are also imprecise.
-Thus, while we encourage you to investigate how AI chatbots can help
-improve your programming and statistical analysis skills, we caution you
-to skeptically review all code and language produced to ensure its
-alignment to the course expectations. To be explicit: you may use AI
-chatbots for assistance with your assignments. If you use one to
-generate your responses, you must indicate so on your assignment. You do
-not need to do so if you have used these tools only to help with coding
-tasks and/or light editing of your written responses. You are likely
-already familiar with OpenAI’s <a href="chat.openai.com">ChatGPT</a>. As
-you gain more experience as a programmer, you may want to use an AI tool
-that is designed specifically to help with coding such as <a
+Beyond AI chatbots’ known proclivity for “hallucinating” facts and
+reproducing social biases, their solutions to programming tasks often
+require adaptation and revision by a knowledgeable human. Further,
+because their ability to generate text relies on using billions of
+phrase chunks in the public domain to predict the next word, their
+language on technical topics can be imprecise when many other writers on
+these topics are also imprecise. Thus, while we encourage you to
+investigate how AI chatbots can help improve your programming and
+statistical analysis skills, we caution you to skeptically review all
+code and language produced to ensure its alignment to the course
+expectations. To be explicit: you may use AI chatbots for assistance
+with your assignments. If you use one to generate your responses, you
+must indicate so on your assignment. You do not need to do so if you
+have used these tools only to help with coding tasks and/or light
+editing of your written responses. You are likely already familiar with
+OpenAI’s <a href="chat.openai.com">ChatGPT</a>. As you gain more
+experience as a programmer, you may want to use an AI tool that is
+designed specifically to help with coding such as <a
 href="github.com/features/copilot">GitHub Copilot</a> or <a
 href="https://www.askcodi.com/">AskCodi</a>.</p>
 </div>
@@ -1422,17 +1423,17 @@ if you are not there. While there is not an automatic grade deduction
 for missing classes, we hope to create a value proposition by which
 attending class will help you learn more and excessive absences will
 make it challenging to succeed in the course.</p>
-<p>We know our UO community will still be navigating COVID-19, and some
-students will need to isolate and rest if they get COVID. Please take
-absences only when necessary, so when they are necessary, your prior
-attendance will have positioned you for success. Students with COVID are
-encouraged to seek guidance and resources at <a
-href="https://coronavirus.uoregon.edu/">UO’s COVID-19 Safety
-Resources</a> webpage.</p>
-<p>I will be mindful of the many impacts the unfolding events related to
-COVID-19 may be having on you. There may be situations beyond the
-control of individual students that lead to excessive absences such as
-becoming ill, caring for others, managing home schooling, etc.</p>
+<p>We know our UO community will be navigating illness this fall,
+including COVID-19, and some students will need to isolate and rest if
+they become sick. Please take absences only when necessary, so when they
+are necessary, your prior attendance will have positioned you for
+success. Students with COVID are encouraged to seek guidance and
+resources at <a href="https://coronavirus.uoregon.edu/">UO’s COVID-19
+Safety Resources</a> webpage.</p>
+<p>There may be situations beyond the control of individual students
+that lead to multiple absences such as becoming ill, caring for others,
+managing home schooling, etc. Please communicate with me if such events
+occur for you.</p>
 </div>
 <div id="diversity-equity-and-inclusion" class="section level2">
 <h2>Diversity, Equity, and Inclusion</h2>
