update week 1 slides

--- a/slides/EDUC641_1_intro.html
+++ b/slides/EDUC641_1_intro.html
@@ -124,7 +124,7 @@ Concrete learning objectives:
 ]
 
 .pull-right[
-&lt;img src="kids.jpg" width="4024" style="display: block; margin: auto;" /&gt;
+&lt;img src="kids.jpg" width="85%" style="display: block; margin: auto;" /&gt;
 ]
 
 --
@@ -296,6 +296,7 @@ class: middle, inverse
 
 ### Assignment:
 - Have downloaded R/RStudio and familiarized yourself with the RStudio environment (Modules 1 &amp; 2 from [R Bootcamp](https://community.uoregon.edu/courses/18778))
+- Bring a device to next class (Thursday)
 
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
