--- a/slides/EDUC641_2_measures.html
+++ b/slides/EDUC641_2_measures.html
@@ -4,7 +4,7 @@
     <title>Quantitative Measures</title>
     <meta charset="utf-8" />
     <meta name="author" content="David D. Liebowitz" />
-    <script src="EDUC641_2_measures_files/header-attrs-2.14.3/header-attrs.js"></script>
+    <script src="EDUC641_2_measures_files/header-attrs-2.20/header-attrs.js"></script>
     <link href="EDUC641_2_measures_files/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="EDUC641_2_measures_files/remark-css-0.0.1/uo.css" rel="stylesheet" />
     <link href="EDUC641_2_measures_files/remark-css-0.0.1/ki-fonts.css" rel="stylesheet" />
@@ -47,7 +47,7 @@ class: center, middle, inverse, title-slide
 **How we collect and quantify the data informs the kind of analysis we will conduct.**
 
 ---
-# Core concepts in measurement
+# Core measurement concepts
 
 **What is measurement?** assigning categories or numbers based on a set of rules
 
@@ -177,7 +177,7 @@ Discrete variable
 - Ratio/interval may or may not be (contrast "degrees Celsius" with "years")
 
 ---
-# Four levels/scales of measurement
+## Four levels/scales of measurement
 
 1. Nominal
 2. Ordinal
@@ -220,41 +220,41 @@ Is there a mean (or standard deviation) for the hair color of the students in th
 ]
 
 .pull-right[
-&lt;img src="retract.jpg" width="961" style="display: block; margin: auto;" /&gt;
+&lt;img src="retract.jpg" style="display: block; margin: auto;" /&gt;
 ]
 
 ---
 # The measure of our class
-&lt;img src="measure1.JPG" width="1707" style="display: block; margin: auto;" /&gt;
+&lt;img src="measure1.JPG" style="display: block; margin: auto;" /&gt;
 
 ---
 # The measure of our class
-&lt;img src="measure2.JPG" width="1707" style="display: block; margin: auto;" /&gt;
+&lt;img src="measure2.JPG" style="display: block; margin: auto;" /&gt;
 
 ---
 # The measure of our class
-&lt;img src="measure3.JPG" width="1707" style="display: block; margin: auto;" /&gt;
+&lt;img src="measure3.JPG" style="display: block; margin: auto;" /&gt;
 
 ---
 # The measure of our class
-&lt;img src="measure4.JPG" width="1707" style="display: block; margin: auto;" /&gt;
+&lt;img src="measure4.JPG" style="display: block; margin: auto;" /&gt;
 
 ---
 # The measure of our class
-&lt;img src="measure5.JPG" width="1707" style="display: block; margin: auto;" /&gt;
+&lt;img src="measure5.JPG" style="display: block; margin: auto;" /&gt;
 
 ---
 # The measure of our class
-&lt;img src="measure6.JPG" width="1707" style="display: block; margin: auto;" /&gt;
+&lt;img src="measure6.JPG" style="display: block; margin: auto;" /&gt;
 
 ---
 # The measure of our class
 
-Qualtrics: https://oregon.qualtrics.com/jfe/form/SV_0MSB8ExhepNtVdA
+Qualtrics: [https://oregon.qualtrics.com/jfe/form/SV_eJ8vRcuLXwXnbsG](https://oregon.qualtrics.com/jfe/form/SV_eJ8vRcuLXwXnbsG)
 
 or
 
-&lt;img src="survey_qr.jpg" width="333" style="display: block; margin: auto;" /&gt;
+&lt;img src="survey_qr.png" width="333" style="display: block; margin: auto;" /&gt;
 
 ---
 class: middle, inverse
@@ -274,7 +274,7 @@ class: middle, inverse
 ---
 # Measure reliability &amp; validity
 
-&lt;img src="lo_rely.jpg" width="1529" style="display: block; margin: auto;" /&gt;
+&lt;img src="lo_rely.jpg" style="display: block; margin: auto;" /&gt;
 
 --
 .blue[**What kind of validity are we referencing here?**]
@@ -282,7 +282,7 @@ class: middle, inverse
 ---
 # Measure reliability &amp; validity
 
-&lt;img src="hi_rely.jpg" width="1529" style="display: block; margin: auto;" /&gt;
+&lt;img src="hi_rely.jpg" style="display: block; margin: auto;" /&gt;
 
 --
 More on this in EDUC 645, and much more on this in EDLD 663 (*Measurement &amp; Assessment*) and EDLD 661/2 (*Item Response Theory*)!
