--- a/syllabus.html
+++ b/syllabus.html
@@ -1178,9 +1178,9 @@ href="https://stackoverflow.com/questions/tagged/r">StackOverflow</a></li>
 <li><a href="https://stats.stackexchange.com">Stack Exchange</a></li>
 </ul>
 </div>
-<div id="using-artifical-intelligence-ai-tools" class="section level3">
-<h3>Using Artifical Intelligence (AI) Tools</h3>
-<p>Artificial Intelligence (AI) chatbots and the Large Language Models
+<div id="using-artificial-intelligence-ai-tools" class="section level3">
+<h3>Using Artificial Intelligence (AI) Tools</h3>
+<p>Artificial Intelligence (AI) chatbots and the large language models
 (LLMs) on which they rely have dramatically increased the speed and
 efficiency of many programmers. Members of the teaching team regularly
 use such tools in their analytic and drafting tasks. That said, they are
