--- a/schedule.html
+++ b/schedule.html
@@ -1078,6 +1078,9 @@ href="./slides/EDUC641_1_intro.pdf">pdf</a></li>
 <li>Class 2 (9/28) slides:
 <!-- [html](./slides/EDUC641_2_measures.html) | [pdf](./slides/EDUC641_2_measures.pdf) --></li>
 <li>R Tutorial slides: <a href="./slides/tutorial.html">html</a></li>
+</ul>
+<p>Labs:</p>
+<ul>
 <li>Lab overview and expectations: <a
 href="./labs/EDUC%20641%20Lab%20Overview.pdf">pdf</a></li>
 <li>Lab 1: <a href="./labs/Lab%201.docx">doc</a></li>
