Publish Class 2 slides

--- a/index.html
+++ b/index.html
@@ -939,7 +939,7 @@ Lectures
 </button>
 <div class="nav-dropdown-content">
 <a href="./slides/EDUC641_1_intro.html">1. Intro &amp; research design</a>
-<span class="nav-dropdown-header">2. Measurement</span>
+<a href="./slides/EDUC641_2_measures.html">2. Measurement</a>
 <span class="nav-dropdown-header">3. Categorical descriptives</span>
 <span class="nav-dropdown-header">4. Categorical relationships I</span>
 <span class="nav-dropdown-header">5. Categorical relationships II</span>
@@ -1000,7 +1000,9 @@ Lectures
     <li>
       <a href="./slides/EDUC641_1_intro.html">1. Intro &amp; research design</a>
     </li>
-    <li class="dropdown-header">2. Measurement</li>
+    <li>
+      <a href="./slides/EDUC641_2_measures.html">2. Measurement</a>
+    </li>
     <li class="dropdown-header">3. Categorical descriptives</li>
     <li class="dropdown-header">4. Categorical relationships I</li>
     <li class="dropdown-header">5. Categorical relationships II</li>
