Update for Unit 1

--- a/about.html
+++ b/about.html
@@ -863,7 +863,7 @@ Lectures
 <div class="nav-dropdown-content">
 <a href="./slides/EDUC641_1_intro.html">1. Intro &amp; research design</a>
 <a href="./slides/EDUC641_2_measures.html">2. Measurement</a>
-<span class="nav-dropdown-header">3. Categorical descriptives</span>
+<a href="./slides/EDUC641_3_categdescr.html">3. Categorical descriptives</a>
 <span class="nav-dropdown-header">4. Categorical relationships I</span>
 <span class="nav-dropdown-header">5. Categorical relationships II</span>
 <span class="nav-dropdown-header">6. Troubling history of stats</span>
@@ -926,7 +926,9 @@ Lectures
     <li>
       <a href="./slides/EDUC641_2_measures.html">2. Measurement</a>
     </li>
-    <li class="dropdown-header">3. Categorical descriptives</li>
+    <li>
+      <a href="./slides/EDUC641_3_categdescr.html">3. Categorical descriptives</a>
+    </li>
     <li class="dropdown-header">4. Categorical relationships I</li>
     <li class="dropdown-header">5. Categorical relationships II</li>
     <li class="dropdown-header">6. Troubling history of stats</li>
