--- a/assignments.html
+++ b/assignments.html
@@ -939,7 +939,7 @@ Lectures
 <div class="nav-dropdown-content">
 <a href="./slides/EDUC641_1_intro.html">1. Intro &amp; research design</a>
 <a href="./slides/EDUC641_2_measures.html">2. Measurement</a>
-<span class="nav-dropdown-header">3. Categorical descriptives</span>
+<a href="./slides/EDUC641_3_categdescr.html">3. Categorical descriptives</a>
 <span class="nav-dropdown-header">4. Categorical relationships I</span>
 <span class="nav-dropdown-header">5. Categorical relationships II</span>
 <span class="nav-dropdown-header">6. Troubling history of stats</span>
@@ -1002,7 +1002,9 @@ Lectures
     <li>
       <a href="./slides/EDUC641_2_measures.html">2. Measurement</a>
     </li>
-    <li class="dropdown-header">3. Categorical descriptives</li>
+    <li>
+      <a href="./slides/EDUC641_3_categdescr.html">3. Categorical descriptives</a>
+    </li>
     <li class="dropdown-header">4. Categorical relationships I</li>
     <li class="dropdown-header">5. Categorical relationships II</li>
     <li class="dropdown-header">6. Troubling history of stats</li>
@@ -1096,8 +1098,8 @@ in the above html/doc/pdf.</li>
 <li><p>Create visualizations of categorical data</p></li>
 </ul>
 <p>Deadline: October 10, 11:59pm</p>
-<p>Download:
-<!-- [html file](./assignments/assignment01.html) | [cat.csv dataset](./data/cat.csv) --></p>
+<p>Download: <a href="./assignments/assignment01.html">html file</a> |
+<a href="./data/cat.csv">cat.csv dataset</a></p>
 <p>Key:
 <!-- [doc file](./assignments/keys/assignment01_key.docx); [R script](./assignments/keys/assignment01_key.R) --></p>
 </div>
