--- a/data_management.html
+++ b/data_management.html
@@ -866,7 +866,7 @@ Lectures
 <div class="nav-dropdown-content">
 <a href="./slides/EDUC641_1_intro.html">1. Intro &amp; research design</a>
 <a href="./slides/EDUC641_2_measures.html">2. Measurement</a>
-<span class="nav-dropdown-header">3. Categorical descriptives</span>
+<a href="./slides/EDUC641_3_categdescr.html">3. Categorical descriptives</a>
 <span class="nav-dropdown-header">4. Categorical relationships I</span>
 <span class="nav-dropdown-header">5. Categorical relationships II</span>
 <span class="nav-dropdown-header">6. Troubling history of stats</span>
@@ -929,7 +929,9 @@ Lectures
     <li>
       <a href="./slides/EDUC641_2_measures.html">2. Measurement</a>
     </li>
-    <li class="dropdown-header">3. Categorical descriptives</li>
+    <li>
+      <a href="./slides/EDUC641_3_categdescr.html">3. Categorical descriptives</a>
+    </li>
     <li class="dropdown-header">4. Categorical relationships I</li>
     <li class="dropdown-header">5. Categorical relationships II</li>
     <li class="dropdown-header">6. Troubling history of stats</li>
@@ -987,8 +989,9 @@ Code folder.</p>
 <div id="load-relevant-packages" class="section level2">
 <h2>Load relevant packages</h2>
 <pre class="r"><code># Call one package
-library(pacman)
-# Call multiple packages at once
+library(pacman)</code></pre>
+<pre><code>## Warning: package &#39;pacman&#39; was built under R version 4.1.3</code></pre>
+<pre class="r"><code># Call multiple packages at once
 p_load(tidyverse, here, modelsummary)</code></pre>
 </div>
 <div id="read-the-data-in" class="section level2">
