--- a/slides/EDUC641_3_categdescr.html
+++ b/slides/EDUC641_3_categdescr.html
@@ -4,7 +4,7 @@
     <title>Summarizing and displaying categorical data</title>
     <meta charset="utf-8" />
     <meta name="author" content="David D. Liebowitz" />
-    <script src="EDUC641_3_categdescr_files/header-attrs-2.14.3/header-attrs.js"></script>
+    <script src="EDUC641_3_categdescr_files/header-attrs-2.20/header-attrs.js"></script>
     <link href="EDUC641_3_categdescr_files/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="EDUC641_3_categdescr_files/remark-css-0.0.1/uo.css" rel="stylesheet" />
     <link href="EDUC641_3_categdescr_files/remark-css-0.0.1/ki-fonts.css" rel="stylesheet" />
@@ -29,11 +29,7 @@ class: center, middle, inverse, title-slide
 
 
 
-class: middle, inverse
 
-# Quiz
-
----
 # Roadmap
 
 &lt;img src="Roadmap_1.png" width="80%" style="display: block; margin: auto;" /&gt;
@@ -52,10 +48,12 @@ class: middle, inverse
 # The story behind the data
 
 .pull-left[
+.small[
 - [Warren McCleskey](https://www.theatlantic.com/politics/archive/2019/06/legacy-mccleskey-v-kemp/591424/) sentenced to death for murdering police officer during armed robbery in Georgia (1978)
 - McCleskey appeals to the Supreme Court, arguing his death sentence is due to racial bias in sentencing...his appeal is rejected
 - Senator Edward Kennedy sponsors the Racial Justice Act to enforce "the Constitution's promise of equality under the law"
 - McCleskey executed in Georgia (1991)
+]
 ]
 .pull-right[
 &lt;img src="mccleskey.png" width="1848" style="display: block; margin: auto;" /&gt;
@@ -126,7 +124,7 @@ library(here)
 ```
 
 --
-While you're at it, do the same for `tidyverse` and `ggplot2` !
+While you're at it, do the same for `tidyverse`. The `tidyverse` is a collection of helpful packages for manipulating and visualizing data. In particular, it includes the extremely useful `dplyr` and `ggplot2` !
 
 ---
 # Let's first access the data
@@ -2821,8 +2819,12 @@ class: middle, inverse
 
 
 ### Assignment:
-- Assignment #1 Due October 10, 11:59pm
+- Assignment #1 Due October 9, 11:59pm
 
+---
+class: middle, inverse
+
+# Quiz
 
 
     </textarea>
