--- a/data_management.html
+++ b/data_management.html
@@ -867,7 +867,7 @@ Lectures
 <a href="./slides/EDUC641_1_intro.html">1. Intro &amp; research design</a>
 <a href="./slides/EDUC641_2_measures.html">2. Measurement</a>
 <a href="./slides/EDUC641_3_categdescr.html">3. Categorical descriptives</a>
-<span class="nav-dropdown-header">4. Categorical relationships I</span>
+<a href="./slides/EDUC641_4_categrel.html">4. Categorical relationships I</a>
 <span class="nav-dropdown-header">5. Categorical relationships II</span>
 <span class="nav-dropdown-header">6. Troubling history of stats</span>
 <span class="nav-dropdown-header">7. Continuous descriptives I</span>
@@ -932,7 +932,9 @@ Lectures
     <li>
       <a href="./slides/EDUC641_3_categdescr.html">3. Categorical descriptives</a>
     </li>
-    <li class="dropdown-header">4. Categorical relationships I</li>
+    <li>
+      <a href="./slides/EDUC641_4_categrel.html">4. Categorical relationships I</a>
+    </li>
     <li class="dropdown-header">5. Categorical relationships II</li>
     <li class="dropdown-header">6. Troubling history of stats</li>
     <li class="dropdown-header">7. Continuous descriptives I</li>
