--- a/schedule.html
+++ b/schedule.html
@@ -940,7 +940,7 @@ Lectures
 <a href="./slides/EDUC641_1_intro.html">1. Intro &amp; research design</a>
 <a href="./slides/EDUC641_2_measures.html">2. Measurement</a>
 <a href="./slides/EDUC641_3_categdescr.html">3. Categorical descriptives</a>
-<span class="nav-dropdown-header">4. Categorical relationships I</span>
+<a href="./slides/EDUC641_4_categrel.html">4. Categorical relationships I</a>
 <span class="nav-dropdown-header">5. Categorical relationships II</span>
 <span class="nav-dropdown-header">6. Troubling history of stats</span>
 <span class="nav-dropdown-header">7. Continuous descriptives I</span>
@@ -1005,7 +1005,9 @@ Lectures
     <li>
       <a href="./slides/EDUC641_3_categdescr.html">3. Categorical descriptives</a>
     </li>
-    <li class="dropdown-header">4. Categorical relationships I</li>
+    <li>
+      <a href="./slides/EDUC641_4_categrel.html">4. Categorical relationships I</a>
+    </li>
     <li class="dropdown-header">5. Categorical relationships II</li>
     <li class="dropdown-header">6. Troubling history of stats</li>
     <li class="dropdown-header">7. Continuous descriptives I</li>
@@ -1118,8 +1120,7 @@ href="./slides/EDUC641_3_categdescr.html">html</a> | <a
 href="./slides/EDUC641_3_categdescr.pdf">pdf</a></li>
 <li>Data: <a href="./data/deathpenalty.csv">deathpenalty.csv</a> | <a
 href="./data/deathpenalty_codebook.pdf">codebook</a></li>
-<li>R code: <a href="./slides/EDUC641_3_code.R">R script</a>
-<!-- - Lab slides: [html](https://claireconglizhang.github.io/my-slides/EDUC64122F/lab2.html#1) --></li>
+<li>R code: <a href="./slides/EDUC641_3_code.R">R script</a></li>
 </ul>
 <p>Assignment 1:</p>
 <ul>
@@ -1159,13 +1160,13 @@ href="https://nautil.us/issue/92/frontiers/how-eugenics-shaped-statistics">Clayt
 </ul>
 <p>Lectures:</p>
 <ul>
-<li>Classes 4-5 (10/5 and 10/10) slides:
-<!-- [html](./slides/EDUC641_4_categrel.html) | [pdf](./slides/EDUC641_4_categrel.pdf)
-- Class 6 (10/12) slides: [html](./slides/EDUC641_6_history.html) | [pdf](./slides/EDUC641_6_history.pdf)
-
-
-- Data: [deathpenalty.csv](./data/deathpenalty.csv) | [codebook](./data/deathpenalty.csv) 
-- R code: [R script](./slides/EDUC641_4_code.R) --></li>
+<li><p>Classes 4-5 (10/5 and 10/10) slides: <a
+href="./slides/EDUC641_4_categrel.html">html</a> | <a
+href="./slides/EDUC641_4_categrel.pdf">pdf</a>
+<!-- - Class 6 (10/12) slides: [html](./slides/EDUC641_6_history.html) | [pdf](./slides/EDUC641_6_history.pdf)  --></p></li>
+<li><p>Data: <a href="./data/deathpenalty.csv">deathpenalty.csv</a> | <a
+href="./data/deathpenalty_codebook.pdf">codebook</a></p></li>
+<li><p>R code: <a href="./slides/EDUC641_4_code.R">R script</a></p></li>
 </ul>
 <p>Assignment 2:</p>
 <ul>
