--- a/LICENSE.html
+++ b/LICENSE.html
@@ -863,7 +863,7 @@ Lectures
 <a href="./slides/EDUC641_2_measures.html">2. Measurement</a>
 <a href="./slides/EDUC641_3_categdescr.html">3. Categorical descriptives</a>
 <a href="./slides/EDUC641_4_categrel.html">4. Categorical relationships I</a>
-<span class="nav-dropdown-header">5. Categorical relationships II</span>
+<a href="./slides/EDUC641_5_categrel.html#46">5. Categorical relationships II</a>
 <span class="nav-dropdown-header">6. Troubling history of stats</span>
 <span class="nav-dropdown-header">7. Continuous descriptives I</span>
 <span class="nav-dropdown-header">8. Continuous descriptives II</span>
@@ -930,7 +930,9 @@ Lectures
     <li>
       <a href="./slides/EDUC641_4_categrel.html">4. Categorical relationships I</a>
     </li>
-    <li class="dropdown-header">5. Categorical relationships II</li>
+    <li>
+      <a href="./slides/EDUC641_5_categrel.html#46">5. Categorical relationships II</a>
+    </li>
     <li class="dropdown-header">6. Troubling history of stats</li>
     <li class="dropdown-header">7. Continuous descriptives I</li>
     <li class="dropdown-header">8. Continuous descriptives II</li>
