post assignment 1 key

--- a/assignments.html
+++ b/assignments.html
@@ -1104,8 +1104,8 @@ in the above html/doc/pdf.</li>
 <p>Deadline: October 9, 11:59pm</p>
 <p>Download: <a href="./assignments/assignment01.html">html file</a> |
 <a href="./data/cat.csv">cat.csv dataset</a></p>
-<p>Key:
-<!-- [doc file](./assignments/keys/assignment01_key.docx); [R script](./assignments/keys/assignment01_key.R) --></p>
+<p>Key: <a href="./assignments/keys/assignment01_key.docx">doc file</a>;
+<a href="./assignments/keys/assignment01_key.R">R script</a></p>
 </div>
 <div id="assignment-2" class="section level2">
 <h2>3.2. Assignment 2</h2>
@@ -1123,8 +1123,8 @@ inference from a sample to a population</p></li>
 and a statistical inference from a chi-squared statistic</p></li>
 </ul>
 <p>Deadline: October 19, 11:59pm</p>
-<p>Download:
-<!-- [html file](./assignments/assignment02.html) | [cat.csv dataset](./data/cat.csv) --></p>
+<p>Download: <a href="./assignments/assignment02.html">html file</a> |
+<a href="./data/cat.csv">cat.csv dataset</a></p>
 <p>Key:
 <!-- [doc file](./assignments/keys/assignment02_key.docx); [R script](./assignments/keys/assignment02_key.R) --></p>
 </div>
