--- a/schedule.html
+++ b/schedule.html
@@ -1174,8 +1174,8 @@ href="./data/deathpenalty_codebook.pdf">codebook</a></p></li>
 <p>Assignment 2:</p>
 <ul>
 <li>Due: October 20, 11:59pm</li>
-<li><!-- [html file](./assignments/assignment02.html)
-- [cat.csv dataset](./data/cat.csv) --></li>
+<li><a href="./assignments/assignment02.html">html file</a></li>
+<li><a href="./data/cat.csv">cat.csv dataset</a></li>
 </ul>
 </div>
 <div id="unit-3" class="section level2">
