--- a/about.html
+++ b/about.html
@@ -866,7 +866,7 @@ Lectures
 <a href="./slides/EDUC641_3_categdescr.html">3. Categorical descriptives</a>
 <a href="./slides/EDUC641_4_categrel.html">4. Categorical relationships I</a>
 <a href="./slides/EDUC641_4_categrel.html#46">5. Categorical relationships II</a>
-<span class="nav-dropdown-header">6. Troubling history of stats</span>
+<a href="./slides/EDUC641_6_history.html">6. Troubling history of stats</a>
 <span class="nav-dropdown-header">7. Continuous descriptives I</span>
 <span class="nav-dropdown-header">8. Continuous descriptives II</span>
 <span class="nav-dropdown-header">9. Transformations and z-scores</span>
@@ -935,7 +935,9 @@ Lectures
     <li>
       <a href="./slides/EDUC641_4_categrel.html#46">5. Categorical relationships II</a>
     </li>
-    <li class="dropdown-header">6. Troubling history of stats</li>
+    <li>
+      <a href="./slides/EDUC641_6_history.html">6. Troubling history of stats</a>
+    </li>
     <li class="dropdown-header">7. Continuous descriptives I</li>
     <li class="dropdown-header">8. Continuous descriptives II</li>
     <li class="dropdown-header">9. Transformations and z-scores</li>
