--- a/schedule.html
+++ b/schedule.html
@@ -943,8 +943,8 @@ Lectures
 <a href="./slides/EDUC641_4_categrel.html">4. Categorical relationships I</a>
 <a href="./slides/EDUC641_4_categrel.html#46">5. Categorical relationships II</a>
 <a href="./slides/EDUC641_6_history.html">6. Troubling history of stats</a>
-<span class="nav-dropdown-header">7. Continuous descriptives I</span>
-<span class="nav-dropdown-header">8. Continuous descriptives II</span>
+<a href="./slides/EDUC641_7_continuousdescr.html">7. Continuous descriptives I</a>
+<a href="./slides/EDUC641_7_continuousdescr.html">8. Continuous descriptives II</a>
 <span class="nav-dropdown-header">9. Transformations and z-scores</span>
 <span class="nav-dropdown-header">10. Normal distributions</span>
 <span class="nav-dropdown-header">11. CLT</span>
@@ -1014,8 +1014,12 @@ Lectures
     <li>
       <a href="./slides/EDUC641_6_history.html">6. Troubling history of stats</a>
     </li>
-    <li class="dropdown-header">7. Continuous descriptives I</li>
-    <li class="dropdown-header">8. Continuous descriptives II</li>
+    <li>
+      <a href="./slides/EDUC641_7_continuousdescr.html">7. Continuous descriptives I</a>
+    </li>
+    <li>
+      <a href="./slides/EDUC641_7_continuousdescr.html">8. Continuous descriptives II</a>
+    </li>
     <li class="dropdown-header">9. Transformations and z-scores</li>
     <li class="dropdown-header">10. Normal distributions</li>
     <li class="dropdown-header">11. CLT</li>
@@ -1174,7 +1178,8 @@ href="./slides/EDUC641_6_history.pdf">pdf</a></li>
 <li>Data: <a href="./data/deathpenalty.csv">deathpenalty.csv</a> | <a
 href="./data/deathpenalty_codebook.pdf">codebook</a></li>
 <li>R code: <a href="./slides/EDUC641_4_code.R">R script</a></li>
-<li>Lab activities: <a href="./labs/Lab3.docx">doc</a></li>
+<li>Lab activities: <a href="./labs/Lab3.docx">Week 3 Lab</a> | <a
+href="./labs/Lab4.docx">Week 4 Lab</a></li>
 </ul>
 <p>Assignment 2:</p>
 <ul>
@@ -1234,13 +1239,15 @@ href="https://learningstatisticswithr.com/lsr-0.6.pdf">LSWR Chapter
 </ul>
 <p>Lecture slides:</p>
 <ul>
-<li>Classes 7-8 (10/17 &amp; 10/19) slides:
-<!-- [html](./slides/EDUC641_7_continuousdescr.html) | [pdf](./slides/EDUC641_7_continuousdescr.pdf)
-- Class 9 (10/24) slides: [html](./slides/EDUC641_9_transformations.html) | [pdf](./slides/EDUC641_9_transformations.pdf)
-- Classes 10-12 (10/26, 10/31, & 11/2) slides: [html](./slides/EDUC641_10_inference.html) | [pdf](./slides/EDUC641_10_inference.pdf)
-
-- Data: [life_expectancy.csv](./data/life_expectancy.csv) | [codebook](./data/life_expectancy_codebook.pdf)
-- R code: [R Script](./slides/EDUC641_7_code.R) --></li>
+<li><p>Classes 7-8 (10/17 &amp; 10/19) slides: <a
+href="./slides/EDUC641_7_continuousdescr.html">html</a> | <a
+href="./slides/EDUC641_7_continuousdescr.pdf">pdf</a>
+<!-- - Class 9 (10/24) slides: [html](./slides/EDUC641_9_transformations.html) | [pdf](./slides/EDUC641_9_transformations.pdf)
+- Classes 10-12 (10/26, 10/31, & 11/2) slides: [html](./slides/EDUC641_10_inference.html) | [pdf](./slides/EDUC641_10_inference.pdf) --></p></li>
+<li><p>Data: <a
+href="./data/life_expectancy.csv">life_expectancy.csv</a> | <a
+href="./data/life_expectancy_codebook.pdf">codebook</a></p></li>
+<li><p>R code: <a href="./slides/EDUC641_7_code.R">R Script</a></p></li>
 </ul>
 <p>Assignment 3:</p>
 <ul>
