--- a/syllabus.html
+++ b/syllabus.html
@@ -943,8 +943,8 @@ Lectures
 <a href="./slides/EDUC641_4_categrel.html">4. Categorical relationships I</a>
 <a href="./slides/EDUC641_4_categrel.html#46">5. Categorical relationships II</a>
 <a href="./slides/EDUC641_6_history.html">6. Troubling history of stats</a>
-<span class="nav-dropdown-header">7. Continuous descriptives I</span>
-<span class="nav-dropdown-header">8. Continuous descriptives II</span>
+<a href="./slides/EDUC641_7_continuousdescr.html">7. Continuous descriptives I</a>
+<a href="./slides/EDUC641_7_continuousdescr.html">8. Continuous descriptives II</a>
 <span class="nav-dropdown-header">9. Transformations and z-scores</span>
 <span class="nav-dropdown-header">10. Normal distributions</span>
 <span class="nav-dropdown-header">11. CLT</span>
@@ -1014,8 +1014,12 @@ Lectures
     <li>
       <a href="./slides/EDUC641_6_history.html">6. Troubling history of stats</a>
     </li>
-    <li class="dropdown-header">7. Continuous descriptives I</li>
-    <li class="dropdown-header">8. Continuous descriptives II</li>
+    <li>
+      <a href="./slides/EDUC641_7_continuousdescr.html">7. Continuous descriptives I</a>
+    </li>
+    <li>
+      <a href="./slides/EDUC641_7_continuousdescr.html">8. Continuous descriptives II</a>
+    </li>
     <li class="dropdown-header">9. Transformations and z-scores</li>
     <li class="dropdown-header">10. Normal distributions</li>
     <li class="dropdown-header">11. CLT</li>
