post assignment 2 keys

--- a/assignments.html
+++ b/assignments.html
@@ -1131,8 +1131,8 @@ and a statistical inference from a chi-squared statistic</p></li>
 <p>Deadline: October 20, 11:59pm</p>
 <p>Download: <a href="./assignments/assignment02.html">html file</a> |
 <a href="./data/cat.csv">cat.csv dataset</a></p>
-<p>Key:
-<!-- [doc file](./assignments/keys/assignment02_key.docx); [R script](./assignments/keys/assignment02_key.R) --></p>
+<p>Key: <a href="./assignments/keys/assignment02_key.docx">doc file</a>;
+<a href="./assignments/keys/assignment02_key.R">R script</a></p>
 </div>
 <div id="assignment-3" class="section level2">
 <h2>3.3. Assignment 3</h2>
